// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RunTreeItem - snapshots > snapshots completed run 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-completed-001",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "10/10 tasks | 1h ago",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "run-run-completed-001",
  "label": "deploy-service",
  "tooltip": "**Run:** \`run-completed-001\`

**Process:** deploy-service

**Status:** completed

**Tasks:** 10/10 completed

**Created:** Mar 10, 10:00 AM

**Duration:** 5m

",
}
`;

exports[`RunTreeItem - snapshots > snapshots failed run 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-failed-002",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "3/5 tasks | 20m ago",
  "iconPath": {
    "color": "testing.iconFailed",
    "id": "error",
    "type": "ThemeIcon",
  },
  "id": "run-run-failed-002",
  "label": "ci-pipeline",
  "tooltip": "**Run:** \`run-failed-002\`

**Process:** ci-pipeline

**Status:** failed

**Tasks:** 3/5 completed, 2 failed

**Created:** Mar 10, 11:00 AM

**Duration:** 2m

**Error:** Build failed with exit code 1

",
}
`;

exports[`RunTreeItem - snapshots > snapshots pending run 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-pending-003",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "4/8 tasks | 5m ago",
  "iconPath": {
    "color": "charts.blue",
    "id": "sync~spin",
    "type": "ThemeIcon",
  },
  "id": "run-run-pending-003",
  "label": "build-app",
  "tooltip": "**Run:** \`run-pending-003\`

**Process:** build-app

**Status:** pending

**Tasks:** 4/8 completed

**Created:** Mar 10, 11:30 AM

",
}
`;

exports[`RunTreeItem - snapshots > snapshots run with no tasks 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-empty-007",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "no tasks | just now",
  "iconPath": {
    "color": "charts.blue",
    "id": "sync~spin",
    "type": "ThemeIcon",
  },
  "id": "run-run-empty-007",
  "label": "empty-process",
  "tooltip": "**Run:** \`run-empty-007\`

**Process:** empty-process

**Status:** pending

**Tasks:** 0/0 completed

**Created:** Mar 10, 4:00 PM

",
}
`;

exports[`RunTreeItem - snapshots > snapshots run with unknown processId 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-very-long-id-that-needs-truncation-abc123def456",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "no tasks | just now",
  "iconPath": {
    "color": "charts.blue",
    "id": "sync~spin",
    "type": "ThemeIcon",
  },
  "id": "run-run-very-long-id-that-needs-truncation-abc123def456",
  "label": "run-very-...",
  "tooltip": "**Run:** \`run-very-long-id-that-needs-truncation-abc123def456\`

**Process:** unknown

**Status:** pending

**Tasks:** 0/0 completed

**Created:** Mar 10, 3:00 PM

",
}
`;

exports[`RunTreeItem - snapshots > snapshots stale pending run 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-stale-004",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "1/3 tasks | 1d ago",
  "iconPath": {
    "color": "list.warningForeground",
    "id": "warning",
    "type": "ThemeIcon",
  },
  "id": "run-run-stale-004",
  "label": "stale-process",
  "tooltip": "**Run:** \`run-stale-004\`

**Process:** stale-process

**Status:** pending (STALE)

**Tasks:** 1/3 completed

**Created:** Mar 9, 10:00 AM

",
}
`;

exports[`RunTreeItem - snapshots > snapshots waiting run with breakpoint 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-bp-005",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run-breakpoint",
  "description": "3/5 tasks | just now",
  "iconPath": {
    "color": "debugIcon.pauseForeground",
    "id": "hand",
    "type": "ThemeIcon",
  },
  "id": "run-run-bp-005",
  "label": "deploy-production",
  "tooltip": "**Run:** \`run-bp-005\`

**Process:** deploy-production

**Status:** waiting

**Tasks:** 3/5 completed

**Created:** Mar 10, 1:00 PM

**Breakpoint:** Deploy to production?

",
}
`;

exports[`RunTreeItem - snapshots > snapshots waiting run with task 1`] = `
{
  "collapsibleState": 1,
  "command": {
    "arguments": [
      "run-waiting-006",
    ],
    "command": "babysitter.openRun",
    "title": "Open Run",
  },
  "contextValue": "run",
  "description": "5/7 tasks | just now",
  "iconPath": {
    "color": "charts.yellow",
    "id": "loading~spin",
    "type": "ThemeIcon",
  },
  "id": "run-run-waiting-006",
  "label": "data-processing",
  "tooltip": "**Run:** \`run-waiting-006\`

**Process:** data-processing

**Status:** waiting

**Tasks:** 5/7 completed

**Created:** Mar 10, 2:00 PM

",
}
`;

exports[`StatusGroupItem - snapshots > snapshots active group 1`] = `
{
  "collapsibleState": 2,
  "command": undefined,
  "contextValue": "statusGroup-active",
  "description": undefined,
  "iconPath": {
    "color": "charts.blue",
    "id": "sync~spin",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Active (2)",
  "tooltip": null,
}
`;

exports[`StatusGroupItem - snapshots > snapshots completed group 1`] = `
{
  "collapsibleState": 1,
  "command": undefined,
  "contextValue": "statusGroup-completed",
  "description": undefined,
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Completed (3)",
  "tooltip": null,
}
`;

exports[`StatusGroupItem - snapshots > snapshots empty group 1`] = `
{
  "collapsibleState": 2,
  "command": undefined,
  "contextValue": "statusGroup-active",
  "description": undefined,
  "iconPath": {
    "color": "charts.blue",
    "id": "sync~spin",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Active (0)",
  "tooltip": null,
}
`;

exports[`StatusGroupItem - snapshots > snapshots failed group 1`] = `
{
  "collapsibleState": 1,
  "command": undefined,
  "contextValue": "statusGroup-failed",
  "description": undefined,
  "iconPath": {
    "color": "testing.iconFailed",
    "id": "error",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Failed (1)",
  "tooltip": null,
}
`;

exports[`SummaryItem - snapshots > snapshots summary with all run types 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "summary",
  "description": "15 total | 5 active | 8 done | 2 failed",
  "iconPath": {
    "color": undefined,
    "id": "dashboard",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Babysitter Runs",
  "tooltip": null,
}
`;

exports[`SummaryItem - snapshots > snapshots summary with breakpoints 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "summary",
  "description": "10 total | 3 active | 5 done | 2 failed | 3 breakpoint(s)",
  "iconPath": {
    "color": undefined,
    "id": "dashboard",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Babysitter Runs",
  "tooltip": null,
}
`;

exports[`SummaryItem - snapshots > snapshots summary with high counts 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "summary",
  "description": "1000 total | 250 active | 700 done | 50 failed | 15 breakpoint(s)",
  "iconPath": {
    "color": undefined,
    "id": "dashboard",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Babysitter Runs",
  "tooltip": null,
}
`;

exports[`SummaryItem - snapshots > snapshots summary with zero runs 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "summary",
  "description": "0 total | 0 active | 0 done | 0 failed",
  "iconPath": {
    "color": undefined,
    "id": "dashboard",
    "type": "ThemeIcon",
  },
  "id": undefined,
  "label": "Babysitter Runs",
  "tooltip": null,
}
`;

exports[`TaskTreeItem - snapshots > snapshots agent task - resolved 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[agent] resolved 2m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-456-task-agent-002",
  "label": "Code review",
  "tooltip": "**Kind:** agent

**Status:** resolved

**Effect ID:** \`task-agent-002\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 2m

**Agent:** code-reviewer

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots breakpoint task - requested 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task-breakpoint",
  "description": "[breakpoint] requested 1m",
  "iconPath": {
    "color": "debugIcon.pauseForeground",
    "id": "hand",
    "type": "ThemeIcon",
  },
  "id": "task-run-012-task-bp-004",
  "label": "Approval gate",
  "tooltip": "**Kind:** breakpoint

**Status:** requested

**Effect ID:** \`task-bp-004\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 1m

**Question:** Proceed with deployment?

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots breakpoint task - resolved 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[breakpoint] resolved 5m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-013-task-bp-005",
  "label": "Approval gate",
  "tooltip": "**Kind:** breakpoint

**Status:** resolved

**Effect ID:** \`task-bp-005\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:05 AM

**Duration:** 5m

**Question:** Proceed with deployment?

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots node task - resolved 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[node] resolved 1m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-123-task-node-001",
  "label": "Build application",
  "tooltip": "**Kind:** node

**Status:** resolved

**Effect ID:** \`task-node-001\`

**Task ID:** build-task

**Label:** production

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 1m

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots shell task - error 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[shell] error 5s",
  "iconPath": {
    "color": "testing.iconFailed",
    "id": "error",
    "type": "ThemeIcon",
  },
  "id": "task-run-345-task-shell-006",
  "label": "Run migration",
  "tooltip": "**Kind:** shell

**Status:** error

**Effect ID:** \`task-shell-006\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:00 AM

**Duration:** 5s

**Error:** Migration failed: table already exists

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots skill task - requested 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[skill] requested 1m",
  "iconPath": {
    "color": "charts.blue",
    "id": "loading~spin",
    "type": "ThemeIcon",
  },
  "id": "task-run-789-task-skill-003",
  "label": "Deploy infrastructure",
  "tooltip": "**Kind:** skill

**Status:** requested

**Effect ID:** \`task-skill-003\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 1m

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots sleep task - resolved 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[sleep] resolved 30s",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-678-task-sleep-007",
  "label": "Wait for service startup",
  "tooltip": "**Kind:** sleep

**Status:** resolved

**Effect ID:** \`task-sleep-007\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 30s

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots task with all metadata fields 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[agent] resolved 10m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-full-task-full-010",
  "label": "Complex task with all fields",
  "tooltip": "**Kind:** agent

**Status:** resolved

**Effect ID:** \`task-full-010\`

**Task ID:** complex-task

**Label:** priority-high

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:10 AM

**Duration:** 10m

**Agent:** orchestrator

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots task with no duration 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[node] requested",
  "iconPath": {
    "color": "charts.blue",
    "id": "loading~spin",
    "type": "ThemeIcon",
  },
  "id": "task-run-pending-task-no-dur-012",
  "label": "Pending task",
  "tooltip": "**Kind:** node

**Status:** requested

**Effect ID:** \`task-no-dur-012\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots task with no title (uses taskId) 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[node] resolved 1m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-901-task-no-title-008",
  "label": "fallback-task-id",
  "tooltip": "**Kind:** node

**Status:** resolved

**Effect ID:** \`task-no-title-008\`

**Task ID:** fallback-task-id

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 1m

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots task with no title or taskId (uses effectId) 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[node] resolved 1m",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-902-eff-fallback-009",
  "label": "eff-fallback-009",
  "tooltip": "**Kind:** node

**Status:** resolved

**Effect ID:** \`eff-fallback-009\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** 1m

",
}
`;

exports[`TaskTreeItem - snapshots > snapshots task with very short duration 1`] = `
{
  "collapsibleState": 0,
  "command": undefined,
  "contextValue": "task",
  "description": "[node] resolved < 1s",
  "iconPath": {
    "color": "testing.iconPassed",
    "id": "check",
    "type": "ThemeIcon",
  },
  "id": "task-run-fast-task-fast-011",
  "label": "Quick check",
  "tooltip": "**Kind:** node

**Status:** resolved

**Effect ID:** \`task-fast-011\`

**Requested:** Mar 10, 10:00 AM

**Resolved:** Mar 10, 10:01 AM

**Duration:** < 1s

",
}
`;
